[package]
name = "defguard_boringtun_cli"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.6.2"
authors = [
    "Noah Kennedy <nkennedy@cloudflare.com>",
    "Andy Grover <agrover@cloudflare.com>",
    "Jeff Hiner <jhiner@cloudflare.com>",
]
license = "BSD-3-Clause"
readme = "../README.md"
repository = "https://github.com/defGuard/boringtun"
documentation = "https://docs.rs/defguard_boringtun"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["env"] }
defguard_boringtun = { path = "../boringtun", version = "0.6.0", features = ["device"] }
daemonize = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[[bin]]
name = "boringtun"
path = "src/main.rs"
