[package]
name = "defguard_boringtun"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.6.3"
authors = [
    "Noah Kennedy <nkennedy@cloudflare.com>",
    "Andy Grover <agrover@cloudflare.com>",
    "Jeff Hiner <jhiner@cloudflare.com>",
]
license = "BSD-3-Clause"
readme = "../README.md"
repository = "https://github.com/defGuard/boringtun"
documentation = "https://docs.rs/defguard_boringtun"
edition = "2024"

[features]
default = []
device = ["socket2", "thiserror"]
ffi-bindings = ["tracing-subscriber"]
# mocks std::time::Instant with mock_instant
mock-instant = ["mock_instant"]

[dependencies]
aead = "0.5"
base64 = "0.22"
blake2 = "0.10"
chacha20poly1305 = "0.10"
hex = "0.4"
hmac = "0.12"
ip_network = "0.4"
ip_network_table = "0.2"
libc = "0.2"
mock_instant = { version = "0.6", optional = true }
parking_lot = "0.12"
ring = "0.17"
socket2 = { version = "0.6", features = ["all"], optional = true }
thiserror = { version = "2", optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["fmt"], optional = true }
uniffi = { version = "0.31", features = ["cli"] }
untrusted = "0.9"
x25519-dalek = { version = "2", features = [
    "reusable_secrets",
    "static_secrets",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", default-features = false, features = [
    "time",
    "user",
] }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
etherparse = "0.19"
tracing-subscriber = "0.3"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bench]]
name = "crypto_benches"
harness = false

[[bin]]
name = "uniffi-bindgen"
path = "bin/uniffi-bindgen.rs"
